ensure bookmark for pdf template

--- a/ComicDownloader/Resources/HtmlTemplate.html
+++ b/ComicDownloader/Resources/HtmlTemplate.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color:red; ">[[title]]</h1>
+    <h1 style="text-align:center;font-size:28px; font-weight:bold">[[title]]</h1>
     [[content]]
 </body>
 </html>
