master page & home page

--- a/ComicWebApp/wwwroot/index.html
+++ b/ComicWebApp/wwwroot/index.html
@@ -1,14 +1,31 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head >
+    <base href="/" />
+    <title>
+        đọc truyện tranh, truyện Online hay có tại hamtruyen.com
+    </title>
     <meta charset="utf-8" />
-    <title>Angular 2 with ASP.NET 5</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="đọc truyện tranh các bạn có thể đọc truyện online hay mới nhất, cập nhật liên tục đọc truyện online, truyện hot nhất hiện nay tại hamtruyen.com" />
+    <meta name="Keywords" content="đọc truyện, doc truyen, doc truyen tranh, truyen hay" />
+    <meta name="copyright" content="truyen tranh cua hamtruyen.com" />
+    <meta name="google-site-verification" content="bzvuo3Ey_3j1Ajv38N3Zc4V6-DqjhkUMEOzLbHdWGB8" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link href="/vendors/bootstrap.css" rel="stylesheet" />
+    <link href="/content/css/style.css" rel="stylesheet" />
+    <link href="/content/css/jcarousel.responsive.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/vendors/jquery-ui.min.css" />
+
     <script src="libs/es6-shim.min.js"></script>
     <script src="libs/system-polyfills.js"></script>
     <script src="libs/angular2-polyfills.js"></script>
     <script src="libs/system.js"></script>
     <script src="libs/rx.js"></script>
     <script src="libs/angular2.dev.js"></script>
+    <script src="libs/router.dev.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
@@ -27,8 +44,6 @@
 
 </head>
 <body>
-    <h1>Demo of Angular 2 using ASP.NET 5 with Visual Studio 2015</h1>
     <comic-app>Loading...</comic-app>
-
 </body>
 </html>
