--- a/ComicWebApp/wwwroot/index.bk.html
+++ b/ComicWebApp/wwwroot/index.bk.html
@@ -18,9 +18,32 @@
     <link href="/content/css/style.css" rel="stylesheet" />
     <link href="/content/css/jcarousel.responsive.css" rel="stylesheet" />
     <link rel="stylesheet" href="/vendors/jquery-ui.min.css" />
+
+    <script src="libs/es6-shim.min.js"></script>
+    <script src="libs/system-polyfills.js"></script>
+    <script src="libs/angular2-polyfills.js"></script>
+    <script src="libs/system.js"></script>
+    <script src="libs/rx.js"></script>
+    <script src="libs/angular2.dev.js"></script>
+    <!-- 2. Configure SystemJS -->
+    <script>
+        System.config({
+            packages: {
+                app: {
+                    defaultExtension: 'js'
+                }
+            }
+        });
+    </script>
+    <script>
+
+        System.import('app/boot')
+              .then(null, console.error.bind(console));
+    </script>
+
 </head>
 <body>
-
+    <comic-app>Loading...</comic-app>
     <!--START HEADER-->
     <header>
         <div class="header_wrapper row">
@@ -128,68 +151,7 @@
     <section id="middle" class="container-fluid" style="background-image:url('content/images/zx.jpg'); background-attachment:fixed;background-position:top;">
         <section id="container">
 
-            <!-- qc vng --!>
-            <img src=" https://ad.doubleclick.net/ddm/ad/N135802.1966908HAMTRUYEN/B8709353.127222161;sz=10x10;ord=[timestamp]?" width=0; height=0 />
-
-             <!-- endqc vng --!>
-
-                <!-- START GALLERY TRUYEN HOT AND BXH-->
-            <div id="wrapper_gallery_and_bxh" class="row">
-                <!--qc banner ---!>
-                <center><script type="text/javascript" src="http://goldpriceoz.net/ads/ht_head"> </script>
-                </center>
-
-                <!-- end qc banner ---!>
-
-                        <div id="gallery_truyenhot" class="col-md-9 mgtop10"><!--start gallery_truyenhot-->
-                <!--Random mangas and chapters END-->
-                <div class="">
-                    <div class="title_doctruyen moicapnhat clearfix">
-                        <div class="bg lefttbar3 fl"></div>
-                        <div class="centertext fl" style="width:655px;padding-top:3px;">
-                            Giới thiệu truyện
-                        </div>
-                        <div class="bg rightbar3 fl"></div>
-                    </div>
-                    <div class="mgtop10 clearfix">
-                        <div class="div_img_gioithieu">
-                            <a href="appleseed-1386.html">
-                                <img src="/content/images/appleseed.jpg" alt="" />
-                            </a>
-                        </div>
-
-                        <div class="div_info_gioithieu">
-
-                            <a class="manga-name" href="appleseed-1386.html">Appleseed</a>
-                            <div class="manga-info mgtop10">
-                                Cập nhật <a class="manga-lastchap" href="doc-truyen/appleseed-chapter-10-2.html">Chapter 10.2</a>
-                            </div>
-
-                            <div class="manga-info mgtop10">
-                                <span class="glyphicon glyphicon-tags"></span>
-                                <span> Thể loại: </span>
-                                <a class="label label-primary manga-type" href="Theloai/549f819f1788b6107431bd23/shounen.html">Shounen</a><a class="label label-primary manga-type" href="Theloai/549f819f1788b6107431bd19/sci-fi.html">Sci-fi</a><a class="label label-primary manga-type" href="Theloai/549f819f1788b6107431bd09/action.html">Action</a><a class="label label-primary manga-type" href="Theloai/549f819f1788b6107431bd05/manga.html">Manga</a>
-                            </div>
-
-                            <div class="manga-info mgtop10">
-                                <div class="text_desc_gioithieu">
-                                    Thế chiến thứ 3 kết thúc, Duenan Knute và đồng nghiệp cyborg Briareos cố gắng tồn tại ở các thành phố bị bỏ hoang và khu phi quân sự sau chiến tranh. Và chuyện bắt đầu xảy ra
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <br class="clear" />
-            </div>
-
-            <div id="wrapper_bxh" class="col-md-3 mgtop10">
-                <!--start bxh-->
-                <div class="item_bxh old"> <span class="stt stt1">1</span><a href="dau-pha-thuong-khung-1385.html" class="name_bxh">Đấu Phá Thương Khung</a></div><div class="item_bxh even"> <span class="stt stt2">2</span><a href="dau-la-dai-luc-1385.html" class="name_bxh">Đấu La Đại Lục</a></div><div class="item_bxh old"> <span class="stt stt3">3</span><a href="tung-tien-huu-toa-linh-kiem-son-1385.html" class="name_bxh">Tung Tiền Hữu Tọa Linh Kiếm Sơn</a></div><div class="item_bxh even"> <span class="stt stt4">4</span><a href="hiep-khach-giang-ho-1387.html" class="name_bxh">Hiệp khách giang hồ</a></div><div class="item_bxh old"> <span class="stt stt5">5</span><a href="tuyet-the-duong-mon---dau-la-dai-luc-2-1385.html" class="name_bxh">Tuyệt thế Đường Môn - Đấu La Đại Lục 2</a></div><div class="item_bxh even"> <span class="stt stt6">6</span><a href="cuu-dinh-ky-1385.html" class="name_bxh">Cửu Đỉnh Ký</a></div><div class="item_bxh old"> <span class="stt stt7">7</span><a href="yeu-than-ky-1385.html" class="name_bxh">Yêu Thần Ký</a></div><div class="item_bxh even"> <span class="stt stt8">8</span><a href="ban-long-1385.html" class="name_bxh">Bàn Long</a></div><div class="item_bxh old"> <span class="stt stt9">9</span><a href="vo-dong-can-khon-1385.html" class="name_bxh">Võ Động Càn Khôn</a></div><div class="item_bxh even"> <span class="stt stt10">10</span><a href="than-an-vuong-toa-1385.html" class="name_bxh">Thần Ấn Vương Tọa</a></div>
-                <!--end bxh-->
-            </div>
-            </div>
-            <!-- END GALLERY TRUYEN HOT AND BXH-->
+            
             <!-- START TRUYỆN HOT TRONG NGÀY -->
             <div id="wrapper_truyendecu">
                 <div class="title_truyennendoc">
@@ -362,14 +324,14 @@
             </div>
 
             <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-            <script src="Scripts/jquery-1.11.0.min.js"></script>
-            <script src="Css/js/bootstrap.min.js"></script>
+            <script src="/vendors/jquery.js"></script>
+            <script src="/vendors/bootstrap.js"></script>
             <!-- Include all compiled plugins (below), or include individual files as needed -->
-            <script src="Scripts/jquery.jcarousel.min.js"></script>
+            <script src="/vendors/jquery.jcarousel.min.js"></script>
             <script src="Scripts/index.js"></script>
 
-            <link rel="stylesheet" href="Scripts/jquery-ui.min.css" />
-            <script type="text/javascript" src="Scripts/jquery-ui.min.js"></script>
+            <link rel="stylesheet" href="/vendors/jquery-ui.min.css" />
+            <script type="text/javascript" src="/vendors/jquery-ui.min.js"></script>
         </section>
     </section>
     <!--END CONTAINTER-->
@@ -388,5 +350,28 @@
             Email: hoangsakura@gmail.com - Mobile : 0989 789 533   <br />
         </div>
     </footer>
+    <script>
+        $(document).ready(function () {
+            $('#crsTruyenHotTrongNgay').carousel({
+                interval: 10000
+            })
+            $('#crsTruyenHotTrongNgay .carousel-inner .item').each(function () {
+                var next = $(this).next();
+                if (!next.length) {
+                    next = $(this).siblings(':first');
+                }
+                next.children(':first-child').clone().appendTo($(this));
+
+                for (var i = 0; i < 5; i++) {
+                    next = next.next();
+                    if (!next.length) {
+                        next = $(this).siblings(':first');
+                    }
+
+                    next.children(':first-child').clone().appendTo($(this));
+                }
+            });
+        });
+    </script>
 </body>
 </html>
