init json backend

--- a/ComicWebApp/Scripts/app.html
+++ b/ComicWebApp/Scripts/app.html
@@ -2,7 +2,7 @@
 <header>
     <div class="header_wrapper row">
         <div id="logo_left" class="col-xs-6 col-md-4">
-            <a href="index-2.html" title="doc Truyen tranh" class="bg logo"></a>
+            <a href="/" title="doc Truyen tranh" class="bg logo"></a>
         </div>
         <div id="content_right" class="col-md-8">
             <div class="col-md-6 height_row1">
