--- a/ComicWebApp/wwwroot/index.html
+++ b/ComicWebApp/wwwroot/index.html
@@ -26,6 +26,7 @@
     <script src="libs/rx.js"></script>
     <script src="libs/angular2.dev.js"></script>
     <script src="libs/router.dev.js"></script>
+    <script src="libs/http.dev.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
         System.config({
