Inittial home page/story page/reader page

--- a/ComicWebApp/Scripts/shared/story-list.html
+++ b/ComicWebApp/Scripts/shared/story-list.html
@@ -1,173 +1,15 @@
-﻿<div *ngIf="topStory" class="row_content clearfix">
-    <div class="item_truyennendoc">
+﻿<div class="row_content clearfix" *ngIf="stories">
+    <div class="item_truyennendoc" *ngFor="#story of stories; #i=index">
         <div class="wrapper_imgage">
-            <a href="tokimeichatte-gomen-ne-1386.html">
-                <img u="image" src="/content/images/appleseed.jpg" alt="Tokimeichatte Gomen Ne? - Thực Hiện Bởi hamtruyen.vn">
+            <a (click)="viewStory(story)">
+                <img u="image" [src]="story.CoverUrl" [attr.alt]="story.Name">
             </a>
-            <a href="doc-truyen/tokimeichatte-gomen-ne-chapter-1.html">
-                <h5 class="tenchap_slide">Chapter 1</h5>
+            <a href="doc-truyen/tokimeichatte-gomen-ne-chapter-1.html" *ngIf="story.Chapters.length> 0">
+                <h5 class="tenchap_slide">{{story.Chapters[story.Chapters.length -1].Name}}</h5>
             </a>
         </div>
-        <a href="tokimeichatte-gomen-ne-1386.html">
-            <h5 class="tentruyen_slide">Tokimeichatte Gomen Ne?</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="teizokurei-monophobia-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Teizokurei Monophobia - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/teizokurei-monophobia-chapter-2.html">
-                <h5 class="tenchap_slide">Chapter 2</h5>
-            </a>
-        </div>
-        <a href="teizokurei-monophobia-1386.html">
-            <h5 class="tentruyen_slide">Teizokurei Monophobia</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="dna-doesnt-tell-us-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="DNA Doesnt Tell Us - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/dna-doesnt-tell-us-chapter-4.html">
-                <h5 class="tenchap_slide">Chapter 4</h5>
-            </a>
-        </div>
-        <a href="dna-doesnt-tell-us-1386.html">
-            <h5 class="tentruyen_slide">DNA Doesnt Tell Us</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="papa-no-iukoto-o-kikinasai-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Papa no Iukoto o Kikinasai! - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/papa-no-iukoto-o-kikinasai-chapter-12---end.html">
-                <h5 class="tenchap_slide">Chapter 12 - EN...</h5>
-            </a>
-        </div>
-        <a href="papa-no-iukoto-o-kikinasai-1386.html">
-            <h5 class="tentruyen_slide">Papa no Iukoto o Kikinasai!</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="mai-ball-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Mai Ball! - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/mai-ball-chapter-2.html">
-                <h5 class="tenchap_slide">Chapter 2</h5>
-            </a>
-        </div>
-        <a href="mai-ball-1386.html">
-            <h5 class="tentruyen_slide">Mai Ball!</h5>
-        </a>
-    </div>
-</div>
-<div class="row_content clearfix">
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="karasutengu-kabuto-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Karasutengu Kabuto - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/karasutengu-kabuto-chapter-2-1.html">
-                <h5 class="tenchap_slide">Chapter 2.1</h5>
-            </a>
-        </div>
-        <a href="karasutengu-kabuto-1386.html">
-            <h5 class="tentruyen_slide">Karasutengu Kabuto</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="dr--frost-1387.html"><img u="image" src="/content/images/appleseed.jpg" alt="Dr. Frost - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/dr--frost-chapter-14.html">
-                <h5 class="tenchap_slide">Chapter 14</h5>
-            </a>
-        </div>
-        <a href="dr--frost-1387.html">
-            <h5 class="tentruyen_slide">Dr. Frost</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="cot-sinh-hoa-1385.html"><img u="image" src="/content/images/appleseed.jpg" alt="Cốt sinh hoa - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/cot-sinh-hoa-chapter-1.html">
-                <h5 class="tenchap_slide">Chapter 1</h5>
-            </a>
-        </div>
-        <a href="cot-sinh-hoa-1385.html">
-            <h5 class="tentruyen_slide">Cốt sinh hoa</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="at-each-others-throats-1387.html"><img u="image" src="/content/images/appleseed.jpg" alt="At Each Other’s Throats - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/at-each-others-throats-chapter-15.html">
-                <h5 class="tenchap_slide">Chapter 15</h5>
-            </a>
-        </div>
-        <a href="at-each-others-throats-1387.html">
-            <h5 class="tentruyen_slide">At Each Other’s Throats</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="19-tang-dia-nguc-1385.html"><img u="image" src="/content/images/appleseed.jpg" alt="19 Tầng Địa Ngục - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/19-tang-dia-nguc-chapter-3.html">
-                <h5 class="tenchap_slide">Chapter 3</h5>
-            </a>
-        </div>
-        <a href="19-tang-dia-nguc-1385.html">
-            <h5 class="tentruyen_slide">19 Tầng Địa Ngục</h5>
-        </a>
-    </div>
-</div>
-<div class="row_content clearfix">
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="tay-dam-hac-am-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Tay Đấm Hắc Ám - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/tay-dam-hac-am-chapter-1.html">
-                <h5 class="tenchap_slide">Chapter 1</h5>
-            </a>
-        </div>
-        <a href="tay-dam-hac-am-1386.html">
-            <h5 class="tentruyen_slide">Tay Đấm Hắc Ám</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="tinh-yeu-bat-dau-tu-ngay-hom-nay-1385.html"><img u="image" src="/content/images/appleseed.jpg" alt="Tình Yêu! Bắt Đầu Từ Ngày Hôm Nay - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/tinh-yeu-bat-dau-tu-ngay-hom-nay-chapter-2.html">
-                <h5 class="tenchap_slide">Chapter 2</h5>
-            </a>
-        </div>
-        <a href="tinh-yeu-bat-dau-tu-ngay-hom-nay-1385.html">
-            <h5 class="tentruyen_slide">Tình Yêu! Bắt Đầu Từ Ngày Hôm Nay</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="tinh-yeu-giao-huan-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Tình Yêu Giáo Huấn - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/tinh-yeu-giao-huan-chapter-5.html">
-                <h5 class="tenchap_slide">Chapter 5</h5>
-            </a>
-        </div>
-        <a href="tinh-yeu-giao-huan-1386.html">
-            <h5 class="tentruyen_slide">Tình Yêu Giáo Huấn</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="force-of-will-1386.html"><img u="image" src="/content/images/appleseed.jpg" alt="Force Of Will - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/force-of-will-chapter-4---the-seven-kings-of-the-lands.html">
-                <h5 class="tenchap_slide">Chapter 4 - The...</h5>
-            </a>
-        </div>
-        <a href="force-of-will-1386.html">
-            <h5 class="tentruyen_slide">Force Of Will</h5>
-        </a>
-    </div>
-    <div class="item_truyennendoc">
-        <div class="wrapper_imgage">
-            <a href="ban-gai-cua-toi-la-rong-du-1385.html"><img u="image" src="/content/images/appleseed.jpg" alt="Bạn Gái Của Tôi Là Rồng Dữ - Thực Hiện Bởi hamtruyen.vn"></a>
-            <a href="doc-truyen/ban-gai-cua-toi-la-rong-du-chapter-2.html">
-                <h5 class="tenchap_slide">Chapter 2</h5>
-            </a>
-        </div>
-        <a href="ban-gai-cua-toi-la-rong-du-1385.html">
-            <h5 class="tentruyen_slide">Bạn Gái Của Tôi Là Rồng Dữ</h5>
+        <a (click)="viewStory(story)">
+            <h5 class="tentruyen_slide">{{story.Name}}</h5>
         </a>
     </div>
 </div>
