--- a/ComicWebApp/wwwroot/index.html
+++ b/ComicWebApp/wwwroot/index.html
@@ -18,6 +18,11 @@
     <link href="/content/css/style.css" rel="stylesheet" />
     <link href="/content/css/jcarousel.responsive.css" rel="stylesheet" />
     <link rel="stylesheet" href="/vendors/jquery-ui.min.css" />
+    <link rel="stylesheet" href="/vendors/nanoscroller.css" />
+    <script src="/vendors/jquery.js"></script>
+    <script src="/vendors/bootstrap.js"></script>
+    <script src="/vendors/jquery.jcarousel.min.js"></script>
+    <script src="/vendors/jquery.nanoscroller.min.js"></script>
 
     <script src="libs/es6-shim.min.js"></script>
     <script src="libs/system-polyfills.js"></script>
