80% chapter reader pages

--- a/ComicWebApp/Scripts/shared/top-story.html
+++ b/ComicWebApp/Scripts/shared/top-story.html
@@ -19,7 +19,7 @@
 
                 <a class="manga-name" (click)="viewStory(topStory)">{{topStory.Name}}</a>
                 <div class="manga-info mgtop10">
-                    Cập nhật <a class="manga-lastchap" href="doc-truyen/appleseed-chapter-10-2.html">{{lastChapter.Name}}</a>
+                    Cập nhật <a class="manga-lastchap" (click)="viewLastChap()">{{lastChapter.Name}}</a>
                 </div>
 
                 <div class="manga-info mgtop10">
