--- a/ComicWebApp/Scripts/shared/story-genres.html
+++ b/ComicWebApp/Scripts/shared/story-genres.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-xs-12 wrapper_list_theloai">
             <div class="col-xs-12">
-                <a class="col-xs-4" (click)="viewGenre(genre)" *ngFor="#genre of genres">{{genre.Name}}[{{StoriesCount}}]</a>
+                <a class="col-xs-4" (click)="viewGenre(genre)" *ngFor="#genre of genres">{{genre.Name}}</a>
             </div>
         </div>
 
