finish - directory/search page

--- a/ComicWebApp/Scripts/app.html
+++ b/ComicWebApp/Scripts/app.html
@@ -7,8 +7,8 @@
         <div id="content_right" class="col-md-8">
             <div class="col-md-6 height_row1">
                 <div class="wrapper_search input-group">
-                    <input type="text" class="form-control" id="txtSearchTruyen" placeholder="Tìm Kiếm" />
-                    <button class="input-group-addon bg search btnSearch" onclick="search();"></button>
+                    <input type="text"  [(ngModel)]="keyword" class="form-control" id="txtSearchTruyen" placeholder="Tìm Kiếm" />
+                    <button class="input-group-addon bg search btnSearch" (click)="doSearch()"></button>
                 </div>
             </div>
             <div class="col-md-6 height_row1" id="login-part">
