--- a/ComicWebApp/Scripts/search/search.html
+++ b/ComicWebApp/Scripts/search/search.html
@@ -3,7 +3,7 @@
         <div class="title_doctruyen manhua">
             <div class="bg leftbar1 fl"></div>
             <div class="centertext fl" style="width:655px;padding-top:3px;">
-                Kết quả tìm kiếm {{keyword | uppercase}}
+                Tìm thấy {{totalItems}} truyện với từ khóa :  {{keyword | uppercase}}
                 <a [routerLink]="['Directory']" class="link_right">Danh sách truyện</a>
             </div>
             <div class="bg rightbar1 fl"></div>
