--- a/ComicWebApp/wwwroot/htmls/app.html
+++ b/ComicWebApp/wwwroot/htmls/app.html
@@ -55,7 +55,7 @@
                                     <div class="row mgtop" id="div_error"></div>
                                 </div>
                                 <div class="row description_login">
-                                    Nếu bạn chưa có nick tại hamtruyen thì xin mời <a href="dangky.html">đăng ký tại đây</a>.<br />
+                                    Nếu bạn chưa có nick tại {{siteName}} thì xin mời <a [routerLink]="['Register']" >đăng ký tại đây</a>.<br />
                                     Hoặc đăng nhập qua tài khoản <a href="dangky8849.html?type=face">Facebook</a>.
                                 </div>
                             </div>
@@ -63,9 +63,6 @@
                     </form>
                 </section>
                 <!--END LOGIN-->
-
-
-
             </div>
             <div class="col-md-12 height_row2" id="big_menu_horizontal">
                 <ul class="nav navbar-nav">
