--- a/ComicWebApp/Scripts/directory/directory.html
+++ b/ComicWebApp/Scripts/directory/directory.html
@@ -15,7 +15,7 @@
         <!--start list abc search-->
 
         <div class="col-md-12" id="list_kw">
-            <a (click)="resetFilter(filter)" *ngFor="#filter of filters">{{filter}}</a> 
+            <a (click)="resetFilter(f)" *ngFor="#f of filters" [class.active]="filter==f">{{f}}</a> 
         </div>
 
         <div id="type_hot" class="col-md-12 mgtop10">
