--- a/ComicWebApp/Scripts/app.html
+++ b/ComicWebApp/Scripts/app.html
@@ -7,7 +7,7 @@
         <div id="content_right" class="col-md-8">
             <div class="col-md-6 height_row1">
                 <div class="wrapper_search input-group">
-                    <input type="text"  [(ngModel)]="keyword" class="form-control" id="txtSearchTruyen" placeholder="Tìm Kiếm"  (keyup.enter)="doSearch()"/>
+                    <input type="text" [(ngModel)]="keyword" class="form-control" id="txtSearchTruyen" placeholder="Tìm Kiếm" (keyup.enter)="doSearch()" />
                     <button class="input-group-addon bg search btnSearch" (click)="doSearch()"></button>
                 </div>
             </div>
@@ -15,7 +15,7 @@
                 <button id="btn_log" type="button" class="btn btn-default" data-toggle="modal" data-target="#login_section_wrapper">Đăng nhập</button>
                 <!--START LOGIN-->
                 <section id="login_section_wrapper" class="modal fade" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="login" aria-hidden="true">
-                    <form id="login_form" method="post">
+                    <form id="login_form" method="post" (ngSubmit)="onLogin()" #loginForm="ngForm">
                         <div class="modal-dialog modal-md" id="login_section">
                             <div class="modal-content" style="border-radius:0;">
                                 <div class="modal-header header_login">
@@ -26,21 +26,30 @@
                                     <h4 class="modal-title">Đăng Nhập</h4>
                                 </div>
                                 <div class="login_form modal-body">
+                                    <div class="row" *ngIf="errorMessage">
+
+                                        <div class="col-lg-12 ui-state-error-text">
+                                                {{errorMessage}}
+                                        </div>
+                                    </div>
                                     <div class="row">
 
                                         <div class="col-lg-12">
-                                            <input type="text" class="form-control" id="login_user_name" name="login_user_name" placeholder="Tên tài khoản" />
+                                            <input type="text" required class="form-control" id="login_user_name" name="login_user_name" placeholder="Tên tài khoản" [(ngModel)]="user.Username" ngControl="username" #username="ngForm" minLength="6" />
+                                            <label class="ui-state-error-text" *ngIf="!username.valid && username.touched">
+                                                Vui long nhap tên đăng nhập
+                                            </label>
                                         </div>
                                     </div>
                                     <div class="row mgtop10">
 
                                         <div class="col-lg-12">
-                                            <input type="password" class="form-control" id="login_password" name="login_password" placeholder="Mật khẩu đăng nhập" />
+                                            <input type="password" class="form-control" id="login_password" name="login_password" placeholder="Mật khẩu đăng nhập" [(ngModel)]="user.Password" ngControl="password" #password="ngForm" required minLength="6" />
                                         </div>
                                     </div>
                                     <div class="row mgtop10">
                                         <div class="col-lg-6">
-                                            <input type="checkbox" checked="checked" id="chkRememberPass" name="remember_pass" /> Nhớ mật khẩu
+                                            <input type="checkbox" checked="checked" id="chkRememberPass" name="remember_pass" [(ngModel)]="rememberMe" /> Nhớ mật khẩu
                                         </div>
                                         <div class="col-lg-6">
                                             <a href="quenmatkhau.html">Quên mật khẩu</a>
@@ -48,7 +57,7 @@
                                     </div>
                                     <div class="row mgtop10">
                                         <div class="col-lg-12">
-                                            <button id="btn_login" class="btn_hamtruyen">Đăng Nhập</button>
+                                            <button id="btn_login" class="btn_hamtruyen" [class.disabled]="!loginForm.form.valid" [disabled]="!loginForm.form.valid">Đăng Nhập</button>
                                             <input type="hidden" name="act_log" id="act_log" />
                                         </div>
                                     </div>
