--- a/ComicWebApp/Scripts/app.html
+++ b/ComicWebApp/Scripts/app.html
@@ -9,69 +9,121 @@
                 <div class="wrapper_search input-group">
                     <input type="text" [(ngModel)]="keyword" class="form-control" id="txtSearchTruyen" placeholder="Tìm Kiếm" (keyup.enter)="doSearch()" />
                     <button class="input-group-addon bg search btnSearch" (click)="doSearch()"></button>
-                </div>
+                </div>     
             </div>
             <div class="col-md-6 height_row1" id="login-part">
-                <button id="btn_log" type="button" class="btn btn-default" data-toggle="modal" data-target="#login_section_wrapper">Đăng nhập</button>
-                <!--START LOGIN-->
-                <section id="login_section_wrapper" class="modal fade" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="login" aria-hidden="true">
-                    <form id="login_form" method="post" (ngSubmit)="onLogin()" #loginForm="ngForm">
-                        <div class="modal-dialog modal-md" id="login_section">
-                            <div class="modal-content" style="border-radius:0;">
-                                <div class="modal-header header_login">
-                                    <button type="button" class="close" data-dismiss="modal">
-                                        <span aria-hidden="true">&times;</span>
-                                        <span class="sr-only">Close</span>
-                                    </button>
-                                    <h4 class="modal-title">Đăng Nhập</h4>
-                                </div>
-                                <div class="login_form modal-body">
-                                    <div class="row" *ngIf="errorMessage">
+                <div *ngIf="!logged">
+                    <button id="btn_log" type="button" class="btn btn-default" data-toggle="modal" data-target="#login_section_wrapper">Đăng nhập</button>
+                    <!--START LOGIN-->
+                    <section id="login_section_wrapper" class="modal fade" tabindex="-1" data-backdrop="static" data-keyboard="false" role="dialog" aria-labelledby="login" aria-hidden="true">
+                        <form id="login_form" method="post" (ngSubmit)="onLogin()" #loginForm="ngForm">
+                            <div class="modal-dialog modal-md" id="login_section">
+                                <div class="modal-content" style="border-radius:0;">
+                                    <div class="modal-header header_login">
+                                        <button type="button" class="close" data-dismiss="modal">
+                                            <span aria-hidden="true">&times;</span>
+                                            <span class="sr-only">Close</span>
+                                        </button>
+                                        <h4 class="modal-title">Đăng Nhập</h4>
+                                    </div>
+                                    <div class="login_form modal-body">
+                                        <div class="row" *ngIf="errorMessage">
 
-                                        <div class="col-lg-12 ui-state-error-text">
+                                            <div class="col-lg-12 ui-state-error-text">
                                                 {{errorMessage}}
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="row">
+                                        <div class="row">
 
-                                        <div class="col-lg-12">
-                                            <input type="text" required class="form-control" id="login_user_name" name="login_user_name" placeholder="Tên tài khoản" [(ngModel)]="user.Username" ngControl="username" #username="ngForm" minLength="6" />
-                                            <label class="ui-state-error-text" *ngIf="!username.valid && username.touched">
-                                                Vui long nhap tên đăng nhập
-                                            </label>
+                                            <div class="col-lg-12">
+                                                <input type="text" required class="form-control" id="login_user_name" name="login_user_name" placeholder="Tên tài khoản" [(ngModel)]="user.Username" ngControl="username" #username="ngForm" minLength="6" />
+                                                <label class="ui-state-error-text" *ngIf="!username.valid && username.touched">
+                                                    Vui long nhap tên đăng nhập
+                                                </label>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="row mgtop10">
+                                        <div class="row mgtop10">
 
-                                        <div class="col-lg-12">
-                                            <input type="password" class="form-control" id="login_password" name="login_password" placeholder="Mật khẩu đăng nhập" [(ngModel)]="user.Password" ngControl="password" #password="ngForm" required minLength="6" />
+                                            <div class="col-lg-12">
+                                                <input type="password" class="form-control" id="login_password" name="login_password" placeholder="Mật khẩu đăng nhập" [(ngModel)]="user.Password" ngControl="password" #password="ngForm" required minLength="6" />
+                                            </div>
                                         </div>
+                                        <div class="row mgtop10">
+                                            <div class="col-lg-6">
+                                                <input type="checkbox" checked="checked" id="chkRememberPass" name="remember_pass" [(ngModel)]="rememberMe" /> Nhớ mật khẩu
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <a href="quenmatkhau.html">Quên mật khẩu</a>
+                                            </div>
+                                        </div>
+                                        <div class="row mgtop10">
+                                            <div class="col-lg-12">
+                                                <button id="btn_login" class="btn_hamtruyen" [class.disabled]="!loginForm.form.valid" [disabled]="!loginForm.form.valid">Đăng Nhập</button>
+                                                <input type="hidden" name="act_log" id="act_log" />
+                                            </div>
+                                        </div>
+                                        <div class="row mgtop" id="div_error"></div>
                                     </div>
-                                    <div class="row mgtop10">
-                                        <div class="col-lg-6">
-                                            <input type="checkbox" checked="checked" id="chkRememberPass" name="remember_pass" [(ngModel)]="rememberMe" /> Nhớ mật khẩu
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <a href="quenmatkhau.html">Quên mật khẩu</a>
-                                        </div>
+                                    <div class="row description_login">
+                                        Nếu bạn chưa có nick tại hamtruyen thì xin mời <a [routerLink]="['Register']" data-dismiss="modal">đăng ký tại đây</a>.<br />
+                                        Hoặc đăng nhập qua tài khoản <a href="dangky8849.html?type=face">Facebook</a>.
                                     </div>
-                                    <div class="row mgtop10">
-                                        <div class="col-lg-12">
-                                            <button id="btn_login" class="btn_hamtruyen" [class.disabled]="!loginForm.form.valid" [disabled]="!loginForm.form.valid">Đăng Nhập</button>
-                                            <input type="hidden" name="act_log" id="act_log" />
-                                        </div>
-                                    </div>
-                                    <div class="row mgtop" id="div_error"></div>
-                                </div>
-                                <div class="row description_login">
-                                    Nếu bạn chưa có nick tại hamtruyen thì xin mời <a [routerLink]="['Register']" data-dismiss="modal">đăng ký tại đây</a>.<br />
-                                    Hoặc đăng nhập qua tài khoản <a href="dangky8849.html?type=face">Facebook</a>.
                                 </div>
                             </div>
-                        </div>
-                    </form>
-                </section>
-                <!--END LOGIN-->
+                        </form>
+                    </section>
+                    <!--END LOGIN-->
+                </div>
+
+                <div class="wrapper_dadangnhap" *ngIf="logged">
+                    <a href="/User/Thongtinthanhvien.html"><img src="/content/images/avatar.png" width="37" height="37" alt="{{user.Username}}" class="img_avatar fl"></a>
+                    <div class="wrapper_info_dangnhap dropdown fl">
+                        <button id="btnMenu" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{user.Username}}
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="btnMenu">
+
+                            <li><a href="/User/Thongtinthanhvien.html" target="_blank">Thông tin thành viên</a></li>
+                            <li><a href="/User/doi-mat-khau.html" target="_blank">Đổi mật khẩu</a></li>
+                            <li>
+                                <a href="/User/danhsachtruyen.html" target="_blank">Đăng truyện của bạn</a>
+                            </li>
+                            <li>
+                                <a href="/User/Truyen-Theo-Doi.html">Truyện đang theo dõi</a>
+                            </li>
+                            <li><a href="/User/Logout.html?Logout=1">Đăng xuất</a></li>
+                        </ul>
+                    </div>
+                    <div class="notify_wrapper dropdown fl">
+                        <button id="btnnotify" type="button" onclick="updateNoti('56e5ee480ffdae1bc815941a')" class="bg thongbao_icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span id="number_notify" class="number_notify">0</span>
+                        </button>
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="btnnotify">
+                            <li>Bạn chưa có thông báo hệ thống nào!</li>
+                            <li>
+                                <a class="pull-left" href="/User/thong-bao-he-thong.html">Xem tất cả</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="storyfollow_wrapper dropdown fl">
+                        <button id="btnStoryFollow_dc" title="top 10 truyện bạn theo dõi mới cập nhật chương" class="bg truyentheodoi" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span id="number_truyentheodoi" class="number_notify">0</span>
+                        </button>
+
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="btnStoryFollow_dc">
+
+                            <li>Bạn chưa theo dõi truyện nào!</li>
+                            <li class="row">
+                                <div class="col-md-12">
+                                    <a class="pull-left" href="/User/truyen-theo-doi.html">Xem tất cả</a>
+                                    <a class="pull-right" style="cursor:pointer;" onclick="updateStatusTruyenDaDoc('56e5ee480ffdae1bc815941a')">Reset về 0</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
             <div class="col-md-12 height_row2" id="big_menu_horizontal">
                 <ul class="nav navbar-nav">
