--- a/ComicWebApp/wwwroot/index.html
+++ b/ComicWebApp/wwwroot/index.html
@@ -15,12 +15,14 @@
     <meta name="google-site-verification" content="bzvuo3Ey_3j1Ajv38N3Zc4V6-DqjhkUMEOzLbHdWGB8" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="/vendors/bootstrap.css" rel="stylesheet" />
-    <link href="/content/css/style.css" rel="stylesheet" />
     <link href="/content/css/jcarousel.responsive.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/vendors/jquery.bxslider.min.css" />
     <link rel="stylesheet" href="/vendors/jquery-ui.min.css" />
     <link rel="stylesheet" href="/vendors/nanoscroller.css" />
+    <link href="/content/css/all.min.css" rel="stylesheet" />
     <script src="/vendors/jquery.js"></script>
     <script src="/vendors/bootstrap.js"></script>
+    <script src="/vendors/jquery.bxslider.min.js"></script>
     <script src="/vendors/jquery.jcarousel.min.js"></script>
     <script src="/vendors/jquery.nanoscroller.min.js"></script>
     <script src="/libs/es6-shim.min.js"></script>
@@ -32,6 +34,7 @@
     <script src="/libs/router.dev.js"></script>
     <script src="/libs/http.dev.js"></script>
     <script src="/libs/ng2-bootstrap.min.js"></script>
+    <script src="/libs/angular2-jwt.js"></script>
     <script>
   document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
   ':35729/livereload.js?snipver=1"></' + 'script>')
@@ -46,7 +49,8 @@
                 }
             },
             map: {
-                     moment: '/libs/moment.js'
+                moment: '/libs/moment.js',
+                "angular2-jwt": '/libs/angular2-jwt.js'
                 }
         });
     </script>
