--- a/ComicWebApp/wwwroot/index.html
+++ b/ComicWebApp/wwwroot/index.html
@@ -19,11 +19,13 @@
     <link rel="stylesheet" href="/vendors/jquery.bxslider.min.css" />
     <link rel="stylesheet" href="/vendors/jquery-ui.min.css" />
     <link rel="stylesheet" href="/vendors/nanoscroller.css" />
+    <link rel="stylesheet" href="/vendors/tooltipster.css" />
     <link href="/content/css/all.min.css" rel="stylesheet" />
     <script src="/vendors/jquery.js"></script>
     <script src="/vendors/bootstrap.js"></script>
     <script src="/vendors/jquery.bxslider.min.js"></script>
     <script src="/vendors/jquery.jcarousel.min.js"></script>
+    <script src="/vendors/jquery.tooltipster.min.js"></script>
     <script src="/vendors/jquery.nanoscroller.min.js"></script>
     <script src="/libs/es6-shim.min.js"></script>
     <script src="/libs/system-polyfills.js"></script>
